BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Child_Account_vod__c.object
<CustomObject>
    <description>Describe the hierarchy of accounts and organizations.</description>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Parent_Account_vod__r.Account_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Name_vod__c</fullName>
        <description>Alternate name of one child account used in iRep to show an alpha-bar</description>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Times_vod__c</fullName>
        <description>Used by the Office Best Times control to store the best time to visit this Account.</description>
        <label>Best Times</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Account_Identifier_vod__c</fullName>
        <description>The Account.Account_Identifier_vod for the Child Account.</description>
        <formula>Child_Account_vod__r.Account_Identifier_vod__c</formula>
        <label>Child Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_Search_LastFirst_vod__c</fullName>
        <description>Field used for searching.</description>
        <formula>Child_Account_vod__r.Account_Search_LastFirst_vod__c</formula>
        <label>Child Account Search LastFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the child account in the hierarchical relationship</description>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Of</relationshipLabel>
        <relationshipName>Child_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Affiliation_Count_vod__c</fullName>
        <description>The number of children that this Child Account has.</description>
        <label>Child Affiliation Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Furigana_vod__c</fullName>
        <description>Field used for searching Japanese names using Furigana.</description>
        <formula>Child_Account_vod__r.Furigana_vod__c</formula>
        <label>Child Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Name_vod__c</fullName>
        <description>The Account.formatted_name_vod for the Child Account.</description>
        <formula>Child_Account_vod__r.Formatted_Name_vod__c</formula>
        <label>Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Record_Type_vod__c</fullName>
        <description>The Account.Record_Type for the Child Account</description>
        <formula>CASESAFEID(Child_Account_vod__r.RecordTypeId)</formula>
        <label>Child Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag Account Hierarchy relations where the European Address Support job should copy Addresses.</description>
        <label>Copy Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Status_vod__c</fullName>
        <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
        <label>Customer Master Status</label>
        <picklist>
            <picklistValues>
                <fullName>Staging_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Review_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_BMS__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Enforce the uniqueness of account hierarchy (parent, child) pair.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Key_vod__c</fullName>
        <description>Field used for integrations with external systems, such as Veeva Network</description>
        <label>External Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Name_Furigana_vod__c</fullName>
        <description>Furigana for the Parent Child formatted name</description>
        <formula>Parent_Account_vod__r.Furigana_vod__c &amp; &quot; &quot; &amp; Child_Account_vod__r.Furigana_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Name Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type_vod__c</fullName>
        <description>Describes the type of relationship for this (child, parent) pair</description>
        <label>Hierarchy Type</label>
        <picklist>
            <picklistValues>
                <fullName>AMA Group Practice to Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner/Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider to Hospital via GLID Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider to Account with Address Match (Suite)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider to Account with Address Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaiser Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMA Hospital Credential Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp. Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp. Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACO/MC Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp. Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp. Shareholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Identifier_vod__c</fullName>
        <description>Account Identifier for Child Account and Parent location</description>
        <label>Location Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network_Primary_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this relationship is reported as Primary in Network. Should be mapped to primary_relationship__v.</description>
        <label>Network Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Identifier_vod__c</fullName>
        <description>The Account.Account_Identifier_vod for the Parent Account.</description>
        <formula>Parent_Account_vod__r.Account_Identifier_vod__c</formula>
        <label>Parent Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the parent account in the hierarchical relationship</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Parent_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Affiliation_Count_vod__c</fullName>
        <description>The number of children that this Parent Account has.</description>
        <label>Parent Affiliation Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Furigana_vod__c</fullName>
        <formula>Parent_Account_vod__r.Furigana_vod__c &amp; &quot; &quot; &amp; Child_Account_vod__r.Furigana_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Child Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Name_vod__c</fullName>
        <description>Determines the format for how the Parent and Child name entity is displayed. Default is &quot;Business Location AccountName&quot;</description>
        <formula>If (Child_Account_vod__r.IsPersonAccount, Parent_Account_vod__r.Name + &quot; &quot; + Child_Account_vod__r.LastName + &quot; &quot; + Child_Account_vod__r.FirstName, Parent_Account_vod__r.Name + &quot; &quot; + Child_Account_vod__r.Name)</formula>
        <label>Parent Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Furigana_vod__c</fullName>
        <formula>Parent_Account_vod__r.Furigana_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name_vod__c</fullName>
        <description>The Account.formatted_name_vod for the Parent Account.</description>
        <formula>Parent_Account_vod__r.Formatted_Name_vod__c</formula>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type_vod__c</fullName>
        <description>The Account.Record_Type for the Parent Account.</description>
        <formula>CASESAFEID(Parent_Account_vod__r.RecordTypeId)</formula>
        <label>Parent Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parents_Parent_BMS_EMEA__c</fullName>
        <formula>Parent_Account_vod__r.Formatted_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent&apos;s Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_vod__c</fullName>
        <description>Formula field which determines if the relationship is a primary parent relationship</description>
        <formula>IF(Child_Account_vod__r.Primary_Parent_vod__c =  Parent_Account_vod__c, $Label.Common_Yes_vod, $Label.Common_No_vod)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_BMS_CORE__c</fullName>
        <label>z_Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Chief Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Manager (Staff)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Medical Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCS Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;T Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BMS EMEA: June 2016 (Q2 GRM) - New Field created to lookup the Role Information from the Role Object.</description>
        <label>Role</label>
        <referenceTo>Role_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Child Accounts</relationshipLabel>
        <relationshipName>Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_BMS__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Manager (Staff)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCS Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transplant Coordinator</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_formula_BMS_EMEA__c</fullName>
        <description>BMS EMEA: June 2016 (Q2 GRM) - New Formula Field created to display the Role Lookup in a Text Format to be used in My Customer Views.</description>
        <formula>Role_BMS_EMEA__r.Name</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013: Field created in order to show the specialty on the related list</description>
        <formula>Child_Account_vod__r.Specialty_BMS_EMEA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplace_Phone_BMS_EMEA__c</fullName>
        <formula>Parent_Account_vod__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplace Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Best_Time_Page_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that displays the Child Account Best Time component</description>
        <label>zvod_Best_Time_Page_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ChildAccount_TSF_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that enables display of Territory Specific Field data on the Child Account layout</description>
        <label>zvod_ChildAccount_TSF_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Child_Account_Ratings_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that displays the Child Account Product Metrics component</description>
        <label>zvod_Child_Account_Ratings_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Child Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Accounts</pluralLabel>
    <recordTypes>
        <fullName>Child_Account_Core</fullName>
        <active>true</active>
        <label>Child Account - Core</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Account_IC</fullName>
        <active>true</active>
        <description>Used for Canada Profiles</description>
        <label>Child Account - IC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ParentIsPersonAccount</fullName>
        <active>true</active>
        <description>Parent is a personal account.</description>
        <errorConditionFormula>Parent_Account_vod__r.IsPersonAccount</errorConditionFormula>
        <errorDisplayField>Parent_Account_vod__c</errorDisplayField>
        <errorMessage>The parent account must be a business account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SameParentAndChild</fullName>
        <active>true</active>
        <description>Parent and child accounts are the same.</description>
        <errorConditionFormula>Child_Account_vod__c  =  Parent_Account_vod__c</errorConditionFormula>
        <errorDisplayField>Child_Account_vod__c</errorDisplayField>
        <errorMessage>Parent and child accounts must be different.</errorMessage>
    </validationRules>
</CustomObject>